<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:text="@string/signout_name">
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_book_meeting_room"
            android:onClick="goBookingActivity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/book_room"
            android:layout_marginBottom="50dp">
        </Button>

        <Button
            android:id="@+id/button_register_room"
            android:onClick="goRegisterRoomActivity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register_room"
            android:layout_marginBottom="50dp">
        </Button>

        <Button
            android:id="@+id/button_request_messages"
            android:onClick="goRequestsActivity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/requests">
        </Button>



    </LinearLayout>





</LinearLayout>